--- a/KiteSpots.Client/Components/Layout/NavMenu.razor
+++ b/KiteSpots.Client/Components/Layout/NavMenu.razor
@@ -1,9 +1,11 @@
-﻿@inject NavigationManager NavigationManager
-
+﻿@using KiteSpots.Client.Services
+@using Common.DTO
+@inject NavigationManager NavigationManager
+@inject SpotService spotService
 
 <div class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a href="/">
-    <h1 class="text-white mr-3">Spotguide</h1>
+        <h1 class="text-white mr-3">Spotguide</h1>
     </a>
     <div class="container">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -14,25 +16,23 @@
             <ul class="navbar-nav mr-auto">
                 <label for="Area">Välj område</label>
                 <select name="Area" id="AreaSelector">
-                    <option value="Skane">Skåne</option>
-                    <option value="VastaGotaland">Västra Götaland</option>
-                    <option value="Gotland">Gotland</option>
-                    <option value="Halland">Halland</option>
+                    @foreach (var spot in spots)
+                    {
+                        <option value="@spot.Area">@spot.Area</option>
+                    }
                 </select>
                 <li class="nav-item">
                     <form class="form-inline">
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" id="sandyCheckbox">
-                            <label class="form-check-label" for="sandyCheckbox">Sandy</label>
-                        </div>
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" id="scenicCheckbox">
-                            <label class="form-check-label" for="scenicCheckbox">Scenic</label>
-                        </div>
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" id="relaxingCheckbox">
-                            <label class="form-check-label" for="relaxingCheckbox">Relaxing</label>
-                        </div>
+                        @foreach (var spot in spots)
+                        {
+                            foreach (var property in spot.Properties)
+                            {
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="checkbox" id="@($"propCheckbox_{property}")">
+                                    <label class="form-check-label" for="@($"propCheckbox_{property}")">@property</label>
+                                </div>
+                            }
+                        }
                     </form>
                 </li>
                 <li class="nav-item">
@@ -80,20 +80,23 @@
     </div>
     <AuthorizeView>
         <Authorized>
-            <div>
-                <NavLink class="nav-link text-white" href="/Admin">Administrering</NavLink>
-            </div>
             <div class="btn btn-success active-user">
-                Admin<span></span>
+                <NavLink class="nav-link text-white" href="/Admin">Admin</NavLink>
             </div>
             <NavLink class="nav-link text-white" href="/Logout">Logga ut</NavLink>
         </Authorized>
-    <NotAuthorized>
+        <NotAuthorized>
             <NavLink class="nav-link text-white" href="/Account/Login">Logga in</NavLink>
-    </NotAuthorized>
+        </NotAuthorized>
     </AuthorizeView>
 </div>
 
 @code {
+    private List<SpotDTO> spots = new List<SpotDTO>();
+
+    protected override async Task OnInitializedAsync()
+    {
+        spots.AddRange(await spotService.GetAllSpots());
+    }
 }
 
