--- a/KiteSpots.Client/Components/Layout/NavMenu.razor
+++ b/KiteSpots.Client/Components/Layout/NavMenu.razor
@@ -39,7 +39,7 @@
                     <form class="form-inline">
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" id="AllCheckbox" checked>
-                            <label class="form-check-label" for="sandyCheckbox">Alla</label>
+                            <label class="form-check-label" for="AllCheckbox">Alla</label>
                         </div>
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" id="southwestCheckbox">
