--- a/KiteSpots.Client/Components/Pages/Admin.razor
+++ b/KiteSpots.Client/Components/Pages/Admin.razor
@@ -62,6 +62,7 @@
                 <label class="form-label">Vindriktningar:</label>
                 <div class="row">
                     <div class="col">
+                        @*change to inputselect with options for properties!*@
                         <label for="GoodWindDirections" class="form-label">Bra vindriktningar:</label>
                         <ul class="list-group">
                             @if (NewSpot.WindDirectionGood != null)
@@ -73,7 +74,7 @@
                             }
                         </ul>
                         <div class="input-group mt-2">
-                            <InputText @bind-Value="newWindDirection" class="form-control" placeholder="Lägg till ny bra vindriktning" />
+                            <InputText @bind-Value="newWindDirection" class="form-control" placeholder="Lägg till ny bra vindriktning"/>
                             <button class="btn btn-primary" @onclick="AddGoodWindDirection">Lägg till</button>
                         </div>
                     </div>
