--- a/KiteSpots.Client/Components/Pages/Admin.razor.css
+++ b/KiteSpots.Client/Components/Pages/Admin.razor.css
@@ -1,17 +1,8 @@
-﻿@media (min-width: 576px) {
-    .row-cols-1 {
-        column-count: 2; /* Display cards in 2 columns on small screens */
-    }
+﻿.card {
+    border: 1px solid #dee2e6;
+    transition: box-shadow 0.3s ease;
 }
 
-@media (min-width: 768px) {
-    .row-cols-1 {
-        column-count: 3; /* Display cards in 3 columns on medium screens */
+    .card:hover {
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     }
-}
-
-@media (min-width: 992px) {
-    .row-cols-1 {
-        column-count: 4; /* Display cards in 4 columns on large screens */
-    }
-}
