--- a/KiteSpots.Client/Components/Layout/NavMenu.razor.css
+++ b/KiteSpots.Client/Components/Layout/NavMenu.razor.css
@@ -1,43 +1,46 @@
-/* Custom styles for navbar */
-.navbar-brand {
-    font-size: 24px;
+.navbar-expand-lg .navbar-brand {
+    font-size: 2rem;
     font-weight: bold;
 }
 
-.navbar-nav .nav-link {
-    color: #ffffff;
-    font-size: 18px;
+.navbar-toggler {
+    margin-right: 0.5rem;
 }
 
-    .navbar-nav .nav-link:hover {
-        color: #ffffff;
-        background-color: rgba(255, 255, 255, 0.1);
+
+.navbar-nav {
+    flex-grow: 1; 
+    justify-content: center;
+}
+
+    .navbar-nav .nav-item {
+        display: flex;
+        align-items: center;
+        margin-right: 1rem; 
     }
 
-.dropdown-menu {
-    background-color: #343a40;
+
+.nav-item label {
+    color: #ffffff; 
+    font-size: 1rem; 
+    margin-right: 0.5rem;
 }
 
-.dropdown-item {
-    color: #ffffff;
+
+.nav-item select {
+    width: 150px;
+    font-size: 1rem;
 }
 
-    .dropdown-item:hover {
-        background-color: #007bff;
-    }
-
-.form-control {
-    width: 250px;
+.property-container {
+    border: 3px solid white;
+    padding: 10px; 
+    border-radius: 5px; 
+    display: flex; 
+    align-items: center;
 }
 
-.btn-light {
-    color: #007bff;
-    background-color: #ffffff;
-    border-color: #007bff;
+.form-check-inline {
+    margin-right: 0.5rem; 
 }
 
-    .btn-light:hover {
-        color: #ffffff;
-        background-color: #007bff;
-        border-color: #007bff;
-    }
